--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body onclick="changeVibe()">
   <div class="container">
-  <img id="vibeImage" src="1.jpeg" alt="vibe image" />
+  <img id="vibeImage" src="1.jpeg" alt="vibe image" fotos/
   <h1 id="phrase">FELIZ SAN VALENTIN MI PRECIOSA PERFECTA PRINCESA <3 </h1>
 </div>
 
